--- a/style.css
+++ b/style.css
@@ -21,5 +21,47 @@ html, body {
   top: 10px;
   left: 10px;
   z-index: 1;
-  color: red;
+  color: rgb(226, 21, 21);
+}
+
+.controlPanel {
+  position: absolute;
+  height: 800px;
+  width: 300px;
+  left: 20px;
+  top: calc(50% - 400px);
+  background: rebeccapurple;
+  display: flex;
+  flex-direction: column;
+}
+
+.button {
+  height: 20px;
+  width: 20px;
+  background: palegreen;
+  margin-left: 5px;
+  margin-right: 5px;
+  line-height: 20px;
+  text-align: center;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+.controlPanelItem {
+  display: flex;
+  height: 30px;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.particleSpeed {
+  margin-left: 5px;
+}
+
+.flexRow {
+  display: flex;
 }
