--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ html, body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  font-family: 'Roboto', sans-serif;
 }
 
 .wrapper {
@@ -32,15 +33,39 @@ html, body {
 
 .controlPanel {
   position: absolute;
-  height: 800px;
-  width: 300px;
-  left: 0px;
-  top: 0px;
-  transform: translate(20px, 50px);
-  background: rgba(51, 51, 51, 0.9);
+  height: 300px;
+  width: 400px;
+  left: 25px;
+  top: 25px;
+  background: rgba(51, 51, 51, 0.3);
   display: flex;
   flex-direction: column;
   color: #dddddd;
+  align-items: center;
+  border-radius: 4px;
+}
+
+.mainText {
+  font-size: 18px;
+  width: 25%;
+  color: aquamarine;
+}
+
+.leftSideText {
+  width: 75%;
+}
+
+.flexRow {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.left {
+  width: 75%
+}
+
+.right {
+  width: 25%;
 }
 
 .button {
@@ -57,7 +82,7 @@ html, body {
 .controlPanelItem {
   display: flex;
   height: 30px;
-  width: 100%;
+  width: 90%;
   justify-content: space-between;
   align-items: center;
 }
@@ -66,16 +91,58 @@ html, body {
   margin-left: 5px;
 }
 
-.flexRow {
+.header {
+  height: 15px;
+  width: 100%;
+  background: rgba(105, 105, 105, 0.4);
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  position: relative;
   display: flex;
 }
 
-.header {
-  height: 30px;
-  width: 100%;
-  cursor: move;
+input {
+  width: 30px;
+  background-color : #444444; 
+  border: 0px solid;
+  outline: none;
+  color: #dddddd;
+  text-align: center;
+  font-family: 'Roboto', sans-serif;
+  font-size: 12px;
 }
 
-input {
-  width: 50px;
+.controlPanelOpacityContainer {
+  background: rebeccapurple;
+  height: 100%;
+  width: 20%;
+  position: absolute;
+  right: 0px;
+  display: flex;
+  align-items: center;
+  padding-left: 3px;
+  padding-right: 3px;
+}
+
+.controlPanelOpacitySlider {
+  height: 10px;
+  width: 10px;
+  background: red;
+  border-radius: 100%;
+  position: absolute;
+  left: 20px;
+  cursor: pointer;
+}
+
+.controlPanelOpacityLine {
+  height: 1px;
+  width: 100%;
+  background: blue;
+}
+
+.headerLeft {
+  width: 80%;
+  height: 100%;
+  background: green;
+  cursor: move;
 }
