--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html, body {
   height: 100%;
   width: 100%;
-  background: #333333;
+  background: #1d1d1d;
   margin: 0px;
   display: flex;
   justify-content: center;
@@ -13,137 +13,4 @@ html, body {
   -ms-user-select: none;
   user-select: none;
   font-family: 'Roboto', sans-serif;
-}
-
-.wrapper {
-  position: relative;
-}
-
-.canvas {
-  background: #111111;
-}
-
-.fpsCounter {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  z-index: 1;
-  color: rgb(226, 21, 21);
-}
-
-.controlPanel {
-  position: absolute;
-  height: 300px;
-  width: 400px;
-  left: 25px;
-  top: 25px;
-  background: rgba(51, 51, 51, 0.3);
-  display: flex;
-  flex-direction: column;
-  color: #dddddd;
-  align-items: center;
-  border-radius: 4px;
-}
-
-.mainText {
-  font-size: 18px;
-  width: 25%;
-  color: aquamarine;
-}
-
-.leftSideText {
-  width: 75%;
-}
-
-.flexRow {
-  display: flex;
-  justify-content: flex-start;
-}
-
-.left {
-  width: 75%
-}
-
-.right {
-  width: 25%;
-}
-
-.button {
-  height: 20px;
-  width: 20px;
-  background: rgb(44, 76, 223);
-  margin-left: 5px;
-  margin-right: 5px;
-  line-height: 20px;
-  text-align: center;
-  cursor: pointer;
-}
-
-.controlPanelItem {
-  display: flex;
-  height: 30px;
-  width: 90%;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.particleSpeed {
-  margin-left: 5px;
-}
-
-.header {
-  height: 15px;
-  width: 100%;
-  background: rgba(105, 105, 105, 0.4);
-  border-top-left-radius: 4px;
-  
-  position: relative;
-  display: flex;
-}
-
-.headerLeft {
-  width: 80%;
-  height: 100%;
-  background: #222222;
-  cursor: move;
-  border-top-right-radius: 4px;
-}
-
-.controlPanelOpacityContainer {
-  background: #222222;
-  height: 100%;
-  width: 20%;
-  position: absolute;
-  right: 0px;
-  display: flex;
-  align-items: center;
-  padding-left: 3px;
-  padding-right: 10px;
-}
-
-.controlPanelOpacitySlider {
-  height: 10px;
-  width: 10px;
-  background: #e63e3e;
-  border-radius: 100%;
-  position: absolute;
-  left: 20px;
-  cursor: pointer;
-}
-
-.controlPanelOpacityLine {
-  height: 1px;
-  width: 100%;
-  background: #dddddd;
-}
-
-input {
-  width: 30px;
-  background-color : #444444; 
-  border: 0px solid;
-  outline: none;
-  color: #dddddd;
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
-  font-size: 12px;
 }
